# Vehicle-Insurance-project

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  setup.py  templete.py
.github/workflows/: aws.yaml
config/: schema.yaml
notebooks/: eda.ipynb
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/components/eda/: bivariate_analysis.py  eda_utils.py  multivariate_analysis.py  summary_statistics.py  univariate_analysis.py
src/configuration/: aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  s3_estimator.py
src/logger/: __init__.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
